--- a/css/main-style.css
+++ b/css/main-style.css
@@ -1,4 +1,4 @@
-/* import font from google font */
+ /* import font from google font */
 @import url('https://fonts.googleapis.com/css2?family=Almarai:wght@300;400;700;800&family=Cairo:wght@200..1000&family=Dancing+Script:wght@400;500;600;700&display=swap');
 
 /* universal and main style  start */
@@ -20,7 +20,17 @@ a {
 }
 
 :root {
-  
+  --mainColor1 :#F9F5EB; 
+  --mainColor2 : #B8860B;
+  --mainColor3  : #EAD9B5;
+  --navitemColor : #888888;
+  --white : #ffff;
+  --blue :rgba(5, 81, 145, 1) ;
+  --lightblue : #D9E1ED;
+  --black : #000;
+  --highlightblue : #C4E4FF; 
+
+
 }
 
 .lines2 {
@@ -35,12 +45,387 @@ a {
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
 }
-.swiper-wrapper {
-  transition-timing-function: linear;
-}
-
 .swiper {
   z-index: 0 !important;
 }
 
 /* universal and main style  end */
+
+/* header start */
+
+header {
+  background-color: var(--mainColor1);
+ overflow-x: hidden;
+
+}
+
+
+header .navbar-nav .nav-item .nav-link {
+  color: var(--navitemColor);
+  font-weight: 600;
+  font-size: 16px;
+  transition: all  0.5s;
+  -webkit-transition: all  0.5s;
+  -moz-transition: all  0.5s;
+  -ms-transition: all  0.5s;
+  -o-transition: all  0.5s;
+  padding: 16px, 12px, 16px, 12px;
+ 
+}
+
+header .navbar-nav .nav-item .nav-link:hover{
+  color: var(--mainColor2);
+  
+}
+
+header .navbar-nav .nav-item .nav-link.active {
+  border: 1px solid var(--mainColor2);
+  color: var(--mainColor2);
+  border-radius: 12px;
+  -webkit-border-radius: 12px;
+  -moz-border-radius: 12px;
+  -ms-border-radius: 12px;
+  -o-border-radius: 12px;
+}
+
+header .nav-left {
+ 
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 600px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+ background-image: url(../images/Rectangle.png);
+ background-size: cover;
+ 
+}
+
+header .sticky .nav-left {
+  background-image: none !important;
+}
+
+@media (max-width : 1200px) {
+  header .nav-left {
+    left: -130px;
+    padding-left: 3rem;
+  }
+
+ 
+}
+
+@media (max-width : 1085px) {
+  header .nav-left {
+    left: -152px;
+    padding-left: 5rem;
+  }
+
+ 
+}
+
+@media (max-width : 1040px) {
+ .navbar-collapse {
+   margin-right: -30px;
+ }
+}
+header .nav-left .btn-login {
+  background-color: var(--white);
+  border: 1px solid var(--white);
+  color: var(--mainColor2);
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 22.32px;
+  text-align: center;
+  box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.16);
+  width: 122px;
+  height: 46px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 15px;
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  -ms-border-radius: 15px;
+  -o-border-radius: 15px;
+  transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -ms-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  position: relative;
+  z-index: 0;
+  overflow-y: hidden;
+}
+header .nav-left .btn-login:hover {
+  border-color: var(--mainColor3) ;
+}
+
+header .nav-left .btn-login::before, header .nav-left .btn-login::after {
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  display: block;
+  height: 100%;
+  width: 0;
+  background-color:var(--mainColor3);
+  content: "";
+}
+header .nav-left .btn-login::before {
+  left: 0;
+  transition: width 0.5s;
+  -webkit-transition: width 0.5s;
+  -moz-transition: width 0.5s;
+  -ms-transition: width 0.5s;
+  -o-transition: width 0.5s;
+}
+header .nav-left .btn-login::after {
+  right: 0;
+  transition: width 0.5s;
+  -webkit-transition: width 0.5s;
+  -moz-transition: width 0.5s;
+  -ms-transition: width 0.5s;
+  -o-transition: width 0.5s;
+}
+header .nav-left .btn-login:hover::before {
+  width: 100%;
+ 
+}
+header .nav-left .btn-login:hover:after {
+ 
+  width: 100%;
+}
+
+header .sticky .nav-left .btn-login {
+  background-color: var(--mainColor2);
+  border: 1px solid var(--mainColor2);
+  color: var(--white);
+}
+
+header .sticky .nav-left .btn-login:hover {
+  background-color: var(--mainColor3);
+  border-color: var(--mainColor3) ;
+  color: var(--mainColor2);
+}
+
+header .nav-left .btn-mainsite ,
+header .btns-group .btn-mainsite {
+  background-color: var(--blue);
+  border: 1px solid var(--blue);
+  color: var(--white);
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 22.32px;
+  text-align: center;
+  box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.16);
+  width: 122px;
+  height: 46px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 15px;
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  -ms-border-radius: 15px;
+  -o-border-radius: 15px;
+  transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -ms-transition: all 0.5s;
+  -o-transition: all 0.5s;
+}
+header .nav-left .btn-mainsite:hover
+, header .btns-group .btn-mainsite:hover {
+  background-color: var(--lightblue);
+  border-color: var(--lightblue);
+  color: var(--blue);
+}
+
+
+
+header .nav-left .btn-lang {
+  color: var(--white);
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 20.09px;
+  text-align: center;
+  transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -ms-transition: all 0.5s;
+  -o-transition: all 0.5s;
+}
+
+header .nav-left .btn-lang:hover  {
+  color: var(--mainColor3);
+}
+
+header .sticky .nav-left .btn-lang ,
+header .btns-group .btn-lang{
+  color: var(--mainColor2);
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 20.09px;
+  text-align: center;
+  transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -ms-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  
+}
+
+header .sticky .nav-left .btn-lang:hover ,
+header .btns-group .btn-lang:hover
+{
+  color: var(--blue);
+  
+}
+
+
+header #myheader {
+  transition:  position 1s !important ;
+  -webkit-transition:  position 1s !important ;
+  -moz-transition:  position 1s !important ;
+  -ms-transition:  position 1s !important ;
+  -o-transition:  position 1s !important ;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+}
+
+header .sticky {
+  position: fixed !important;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+  background-color: white !important;
+  height: 100px;
+  box-shadow: -1px 0px 5px rgb(57 63 72 / 30%) !important;
+  transition: display 5s 3s ease !important;
+  margin-right: 0 !important;
+}
+
+header .sticky > .nav {
+  padding-top: 0px !important;
+}
+
+body {
+  height: 1000px;
+}
+
+ header nav .nav-toggle {
+   display: none;
+   margin-left: 30rem;
+   color: var(--mainColor2);
+   font-size: 30px !important;
+   font-weight: bold;
+ }
+
+ @media (max-width : 992px) {
+  header nav .nav-toggle {
+    display: block;
+  }
+ }
+
+ @media (max-width : 767px) {
+  header .nav-left {
+    display: none;
+  }
+
+  header .btns-group {
+    display: flex !important;
+  }
+  header nav .nav-toggle {
+    margin-left: 1rem;
+  }
+ }
+
+
+
+header .offcanvas-start {
+  transition: all 1s !important;
+  -webkit-transition: all 1s !important;
+  -moz-transition: all 1s !important;
+  -ms-transition: all 1s !important;
+  -o-transition: all 1s !important;
+}
+header .offcanvas-start .navbar-nav .nav-link {
+  font-weight: 400 !important;
+  line-height: 22px;
+  color: var(--navitemColor);
+  transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -ms-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  position: relative;
+  padding-right: 0px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+
+header .offcanvas-start .navbar-nav .active {
+  color: var(--mainColor2);
+  border: none !important;
+}
+header .offcanvas-start .navbar-nav .active::after {
+  display: none;
+}
+ header .navbar-light .nav-toggle {
+  color: white !important;
+  font-size: 30px !important;
+  font-weight: bold;
+  display: block;
+}
+
+
+header .offcanvas {
+  background-color: var(--mainColor3);
+}
+
+
+header .offcanvas-header .btn-close {
+  background: transparent
+    url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23B8860B'%3e%3cpath d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/%3e%3c/svg%3e")
+    center/1em auto no-repeat;
+}
+
+header .btns-group .btn-login {
+  background-color: var(--mainColor2);
+  border: 1px solid var(--mainColor2);
+  color: var(--white);
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 22.32px;
+  text-align: center;
+  box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.16);
+  width: 122px;
+  height: 46px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 15px;
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  -ms-border-radius: 15px;
+  -o-border-radius: 15px;
+  transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -ms-transition: all 0.5s;
+  -o-transition: all 0.5s;
+}
+
+header .btns-group .btn-login:hover {
+  background-color: var(--white);
+  border: 1px solid var(--white);
+  color: var(--mainColor2);
+}
+
+
+
+/* header end */
+
