--- a/css/index-style.css
+++ b/css/index-style.css
@@ -1,3 +1,6 @@
+
+/* start land section */
+
 .land-section h1{
     color: var(--black);
     opacity: 87%;
@@ -53,7 +56,8 @@ text-align: right;
 color: var(--black);
 }
 
-.land-section .join-us-btn {
+.land-section .join-us-btn  ,
+.about-us .join-us-btn {
   background-color: var(--mainColor2);
   border: 1px solid var(-mainColor2);
   color: var(--white);
@@ -78,7 +82,8 @@ color: var(--black);
   -ms-transition: all 0.5s;
   -o-transition: all 0.5s;
 }
-.land-section .join-us-btn:hover{
+.land-section .join-us-btn:hover , 
+.about-us .join-us-btn:hover{
   background-color: var(--mainColor3);
   border-color: var(--mainColor3);
   color: var(--mainColor2);
@@ -90,3 +95,33 @@ color: var(--black);
 }
 
 
+/* end land section */
+
+
+/* start about us  */
+
+
+
+.about-us {
+    margin-top: 4rem !important;
+}
+.about-us h2 {
+    color: var(--subheadingblack);
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 59.97px;
+    text-align: right;
+
+}
+
+.about-us p {
+font-size: 18px;
+font-weight: 400;
+line-height: 38px;
+text-align: right;
+color: var(--prgcolor);
+
+}
+
+
+/* end about us */
