end benfites section

--- a/css/main-style.css
+++ b/css/main-style.css
@@ -51,6 +51,17 @@ a {
   z-index: 0 !important;
 }
 
+.rounded-img {
+  overflow: hidden;
+ 
+}
+.rounded-img img {
+  border-radius: 30px;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  -ms-border-radius: 30px;
+  -o-border-radius: 30px;
+}
 /* universal and main style  end */
 
 /* header start */
