--- a/css/index-style.css
+++ b/css/index-style.css
@@ -125,3 +125,31 @@ color: var(--prgcolor);
 
 
 /* end about us */
+
+
+/* start benfits */
+
+.benfits {
+    background-color: var(--mainColor1 );
+}
+
+.benfits h2 {
+    color: var(--subheadingblack);
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 59.97px;
+    text-align: right;
+
+}
+ 
+.benfits p {
+font-size: 20px;
+font-weight: 400;
+line-height: 38px;
+text-align: right;
+color: var(--prgcolor);
+
+}
+
+
+/* end benfits */
