--- a/css/main-style.css
+++ b/css/main-style.css
@@ -32,6 +32,9 @@ a {
   --blackwithopctiy : rgba(0, 0, 0, 0.08);
   --highlightblue : #C4E4FF; 
   --prgcolor : rgba(108, 135, 174, 1);
+  --blogtitlecolor :  #292D33;
+  --blogprgcolor : #9497A1;
+
 
 
 }
