end services section

--- a/css/main-style.css
+++ b/css/main-style.css
@@ -25,6 +25,7 @@ a {
   --mainColor3  : #EAD9B5;
   --navitemColor : #888888;
   --white : #ffff;
+  --white1 :rgba(246, 240, 224, 1);
   --blue :rgba(5, 81, 145, 1) ;
   --lightblue : #D9E1ED;
   --black : #000;
