--- a/css/index-style.css
+++ b/css/index-style.css
@@ -244,6 +244,171 @@ color: var(--white);
 /* end with-muser */
 
 
+/* start services */
+
+.services {
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+}
+
+.services span {
+font-size: 22px;
+font-weight: 400;
+line-height: 41.23px;
+letter-spacing: 0.02em;
+text-align: right;
+color: var(--mainColor2);
+
+}
+.services h2 {
+    color: var(--subheadingblack);
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 59.97px;
+    text-align: right;
+
+}
+
+.services p {
+font-size: 18px;
+font-weight: 400;
+line-height: 38px;
+text-align: right;
+color: var(--prgcolor);
+
+}
+
+.services .some-services {
+    background-color: var(--mainColor1);
+    border-radius: 24px;
+    -webkit-border-radius: 24px;
+    -moz-border-radius: 24px;
+    -ms-border-radius: 24px;
+    -o-border-radius: 24px;
+}
+
+.services .about-services {
+    background-color: var(--mainColor2);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: end;
+    border-top-left-radius: 24px;
+     border-bottom-left-radius: 0;
+     border-top-right-radius: 24px;
+ border-bottom-right-radius: 0;
+}
+@media (min-width : 992px) {
+    .services .about-services 
+    {
+        border-top-left-radius: 0;
+        border-bottom-left-radius: 0;
+        border-top-right-radius: 24px;
+        border-bottom-right-radius: 24px;
+    }
+}
+.services .about-services p {
+    font-size: 17px;
+    font-weight: 700;
+    line-height: 31.86px;
+    text-align: center;
+    color: var(--white);
+    
+}
+
+.services .about-services .btn-outline-light {
+    border: 1px solid var(--white1);
+    color: var(--white1);
+    border-radius: 12px;
+    -webkit-border-radius: 12px;
+    -moz-border-radius: 12px;
+    -ms-border-radius: 12px;
+    -o-border-radius: 12px;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 26.24px;
+    text-align: center;
+    transition: all 0.5s;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -ms-transition: all 0.5s;
+    -o-transition: all 0.5s;
+}
+
+.services .about-services .btn-outline-light:hover {
+    color: var(--mainColor2);
+}
+.services .some-services {
+    margin-top: 5rem;
+    margin-bottom: 7rem;
+}
+.services .some-services .services-cards  {
+    display:  flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    gap: 4rem;
+}
+.services .some-services .services-cards .services-card  {
+    transition: all 0.5s;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -ms-transition: all 0.5s;
+    -o-transition: all 0.5s;
+}
+.services .some-services .services-cards .services-card  .serv-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--white);
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    transition: all 0.5s; 
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -ms-transition: all 0.5s;
+    -o-transition: all 0.5s;
+}
+.services .some-services .services-cards .services-card   .serv-icon svg path {
+    transition: all 0.5s;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -ms-transition: all 0.5s;
+    -o-transition: all 0.5s;
+}
+.services .some-services .services-cards .services-card:hover .serv-icon {
+
+    background-color: var(--mainColor2);
+}
+
+.services .some-services .services-cards .services-card:hover .serv-icon svg path  {
+fill: var(--mainColor1);
+}
+
+.services .some-services .services-cards .services-card:hover h6 {
+    color: var(--mainColor2);
+
+}
+.services .some-services .services-cards .services-card h6 {
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 21px;
+    text-align: right;
+    color: var(--black);
+    transition: all 0.5s ;
+    -webkit-transition: all 0.5s ;
+    -moz-transition: all 0.5s ;
+    -ms-transition: all 0.5s ;
+    -o-transition: all 0.5s ;
+}
+/* end services */
+
 /* start blogs */
 
 .blogs h4 {
