--- a/css/main-style.css
+++ b/css/main-style.css
@@ -80,14 +80,14 @@ header {
 
 header .navbar-nav .nav-item .nav-link {
   color: var(--navitemColor);
-  font-weight: 600;
-  font-size: 16px;
+  font-weight: 600; 
+  font-size: 17px;
   transition: all  0.5s;
   -webkit-transition: all  0.5s;
   -moz-transition: all  0.5s;
   -ms-transition: all  0.5s;
   -o-transition: all  0.5s;
-  padding: 16px, 12px, 16px, 12px;
+  padding: 10px 6px;
  
 }
 
@@ -109,7 +109,7 @@ header .navbar-nav .nav-item .nav-link.active {
 header .nav-left {
  
   position: absolute;
-  left: 0;
+  left: -100px;
   top: 0;
   width: 600px;
   display: flex;
@@ -125,29 +125,36 @@ header .sticky .nav-left {
   background-image: none !important;
 }
 
-@media (max-width : 1200px) {
+@media (max-width : 1300px) {
   header .nav-left {
-    left: -130px;
-    padding-left: 3rem;
+    left: -210px;
+    padding-left: 10rem;
   }
-
- 
 }
 
-@media (max-width : 1085px) {
-  header .nav-left {
-    left: -152px;
-    padding-left: 5rem;
-  }
 
- 
-}
 
-@media (max-width : 1040px) {
+@media (max-width : 1150px) {
  .navbar-collapse {
    margin-right: -30px;
  }
+
+ header .navbar-nav .nav-item .nav-link{
+   font-size: 16px;
+ }
+
+ header .nav-left {
+  left: -220px;
+  padding-left: 12rem;
+  gap: 0.5rem;
 }
+}
+@media (max-width : 1070px) {
+  header .navbar-nav .nav-item .nav-link{
+    font-size: 15px;
+  }
+}
+
 header .nav-left .btn-login ,
 .with-muser .btn-trynow
  {
@@ -330,7 +337,7 @@ header .sticky {
   width: 100%;
   z-index: 1000;
   background-color: white !important;
-  height: 100px;
+  height: 120px;
   box-shadow: -1px 0px 5px rgb(57 63 72 / 30%) !important;
   transition: display 5s 3s ease !important;
   margin-right: 0 !important;
@@ -377,9 +384,10 @@ header .offcanvas-start {
   -o-transition: all 1s !important;
 }
 header .offcanvas-start .navbar-nav .nav-link {
-  font-weight: 400 !important;
+  font-weight: 500 !important;
+  font-size: 17px;
   line-height: 22px;
-  color: var(--navitemColor);
+  color: rgba(0, 0, 0, 0.632);
   transition: all 0.5s;
   -webkit-transition: all 0.5s;
   -moz-transition: all 0.5s;
@@ -449,6 +457,53 @@ header .btns-group .btn-login:hover {
   color: var(--mainColor2);
 }
 
+
+
+
+
+ header .dropdown-cunt {
+  position: relative;
+  display: inline-block;
+ 
+}
+
+header .dropdown-cunt .dropdown-menu {
+  display: block;
+  position: absolute;
+  background-color: var(--white);
+  min-width: 200px;
+  border: none;
+  right: -50px;
+  padding: 0;
+  max-height: 0 ;
+  overflow: hidden;
+  transition: all 0.3s ease;
+  
+}
+
+ header .dropdown-cunt:hover .dropdown-menu {
+  max-height: 600px; 
+  transition-delay: 0.3s; 
+  padding: 1.5rem 0;
+  box-shadow: 0 2px 5px rgba(0,0,0,.1);
+}
+
+.dropdown-menu .items {
+  font-size: 14px;
+  line-height: 2.5;
+  color: var(--light-black) ;
+  transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -ms-transition: all 0.5s;
+  -o-transition: all 0.5s;
+}
+
+.dropdown-content .items:hover {
+  background-color: #1678ba14 !important;
+  color: var(--main-blue) !important;
+  padding-right: 1.5rem;
+}
 
 
 /* header end */
@@ -536,6 +591,17 @@ footer .contact-icon i {
   font-size: 22px;
   
 }
+
+footer .contact-icon svg path  {
+  fill: var(--blue);
+  transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  width: 22px;
+}
+
 footer .contact-icon:hover {
   background-color: var(--mainColor3);
   transform: rotate(45deg);
@@ -547,6 +613,10 @@ footer .contact-icon:hover {
 footer .contact-icon:hover i {
   color: var(--mainColor2);
 }
+footer .contact-icon:hover svg path{
+  fill: var(--mainColor2);
+}
+
 
 footer .lang-select {
   position: relative;
@@ -610,5 +680,35 @@ color: var(--mainColor2);
 
 }
 
+footer .bottom-footer {
+  background-color: var(--mainColor2);
+}
+
+footer .bottom-footer p{
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 23px;
+}
+
+footer .bottom-footer a {
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 23px;
+  text-align: right;
+  padding-right: 0px;
+  color: var(--white);
+  transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  -o-transition: all 0.3s;
+}
+footer .bottom-footer a:hover {
+  color: var(--mainColor3) !important;
+}
+
+footer .bottom-footer span {
+  color: var(--white);
+}
 
 /* footer end */
