end featuers page

--- a/css/main-style.css
+++ b/css/main-style.css
@@ -35,6 +35,12 @@ a {
   --prgcolor : rgba(108, 135, 174, 1);
   --blogtitlecolor :  #292D33;
   --blogprgcolor : #9497A1;
+  --feat-background :  #FFFCF5;
+  --feat-head :  #1D2B4F;
+  --feat-prg : #636E88;
+
+
+
 
 
 
