--- a/css/blog-style.css
+++ b/css/blog-style.css
@@ -240,13 +240,8 @@ header {
   position: absolute;
   z-index: 2;
   color: var(--white);
-  left: 50%;
   width: 100%;
-  transform: translateX(-50%);
-  -webkit-transform: translateX(-50%);
-  -moz-transform: translateX(-50%);
-  -ms-transform: translateX(-50%);
-  -o-transform: translateX(-50%);
+ margin: 0 auto;
   bottom: 20px;
   font-size: 24px;
   font-weight: 800;
@@ -316,6 +311,191 @@ header {
 }
 
      /* end small-boxs */
+
+
+     /* start cards  */
+
+     .cards {
+       margin-top: 7rem;
+       margin-bottom: 7rem;
+     }
+
+
+     .cards h4 {
+      font-size: 24px;
+      font-weight: 500;
+      line-height: 40px;
+      text-align: start;
+      color: var(--mainColor2);
+      
+      }
+      
+      .cards .show-all {
+           font-size: 18px;
+           font-weight: 600;
+           line-height: 44.98px;
+           color: var(--navitemColor);
+           transition: all 0.5s ;
+           -webkit-transition: all 0.5s ;
+           -moz-transition: all 0.5s ;
+           -ms-transition: all 0.5s ;
+           -o-transition: all 0.5s ;
+           
+      }
+      
+      
+      .cards .show-all:hover {
+          color: var(--mainColor2);
+        
+      }
+
+      
+
+      @media (min-width : 450px) {
+        .cards .search .input-group  {
+          max-width: 100%;
+          width: 400px;
+        }
+  
+        
+      }
+
+      .cards .search input{
+        background: #FFFFFF !important;
+        border: 1px solid rgba(165, 201, 202, 0.4) !important;
+        border-radius: 0 45px 45px 0 !important;
+        -webkit-border-radius: 0 45px 45px 0 !important;
+        -moz-border-radius: 0 45px 45px 0 !important;
+        -ms-border-radius: 0 45px 45px 0 !important;
+        -o-border-radius: 0 45px 45px 0 !important;
+}
+    
+    .cards .search input::placeholder{
+        color: rgba(34, 34, 34, 0.2) !important;
+        font-size: 14px !important;
+        padding-right: 10px;
+    
+    }
+    
+    .cards .search input{
+        padding: .8rem 0;
+        padding-right: 10px;
+    }
+
+    .cards .search .btn-search {
+      background-color: var(--mainColor2);
+      border: 1px solid var(--mainColor2);
+      color: var(--white);
+      font-size: 16px;
+      font-weight: 600;
+      line-height: 22.32px;
+      text-align: center;
+      box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.16);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 45px;
+      -webkit-border-radius: 45px;
+      -moz-border-radius: 45px;
+      -ms-border-radius: 45px;
+      -o-border-radius: 45px;
+      transition: all 0.5s;
+      -webkit-transition: all 0.5s;
+      -moz-transition: all 0.5s;
+      -ms-transition: all 0.5s;
+      -o-transition: all 0.5s;
+}
+
+    .cards .search .btn-search:hover {
+      background-color: var(--mainColor3);
+      border-color: var(--mainColor3);
+      color: var(--mainColor2);
+    }
+    .cards .input-group>:not(:first-child):not(.dropdown-menu):not(.valid-tooltip):not(.valid-feedback):not(.invalid-tooltip):not(.invalid-feedback) {
+      margin-right: -20px;
+      border-top-right-radius: 45px;
+      border-bottom-right-radius: 45px ;
+  }
+
+  .cards .card .card-img {
+    overflow: hidden;
+    height: 185px;
+    border-bottom-left-radius: 0px  !important;
+    border-bottom-right-radius: 0px  !important;
+    border-top-left-radius: 8px  !important;
+    border-top-right-radius: 8px  !important;
+  }
+
+  .cards .card .card-img img {
+    transition: all 0.5s;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -ms-transition: all 0.5s;
+    -o-transition: all 0.5s;
+    transform: scale(1);
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    height: 100%;
+    width: 100%;
+    border-bottom-left-radius: 0px  !important;
+    border-bottom-right-radius: 0px  !important;
+    border-top-left-radius: 8px  !important;
+    border-top-right-radius: 8px  !important;
+    
+}
+
+.cards .card .card-img:hover img {
+  transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+  -moz-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  -o-transform: scale(1.2);
+}
+
+
+.cards .card .card-body {
+  display: flex;
+  flex-direction: column;
+  gap: 0.7rem;
+}
+.cards .card .card-body h6 {
+font-size: 12px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: -0.015em;
+text-align: right;
+color: #9497A1;
+}
+.cards .card .card-body .card-title {
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 22.49px;
+  letter-spacing: -0.015em;
+  text-align: right;
+  color: #292D33;
+  transition: all 0.5s ;
+  -webkit-transition: all 0.5s ;
+  -moz-transition: all 0.5s ;
+  -ms-transition: all 0.5s ;
+  -o-transition: all 0.5s ;
+}
+.cards .card .card-body .card-title:hover {
+  color: var(--mainColor2);
+}
+
+.cards .card .card-text {
+font-size: 14px;
+font-weight: 400;
+line-height: 26px;
+text-align: right;
+color: #9497A1;
+
+}
+
+
+     /* end cards */
 
 
 
