--- a/css/main-style.css
+++ b/css/main-style.css
@@ -64,6 +64,15 @@ a {
   display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
+  transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -ms-transition: all 0.5s;
+  -o-transition: all 0.5s;
+}
+
+.lines3:hover {
+  display: block;
 }
 
 .lines6 {
