--- a/css/about_us-style.css
+++ b/css/about_us-style.css
@@ -44,7 +44,7 @@ header {
 font-size: 18px;
 font-weight: 400;
 line-height: 33px;
-text-align: center;
+text-align: start;
 color: var(--prgcolor);
 }
 
