--- a/css/services-style.css
+++ b/css/services-style.css
@@ -99,9 +99,9 @@ color: var(--black);
 }
 
 .services .services-card p {
-    font-size: 15px;
+    font-size: 17px;
     font-weight: 400;
-    line-height: 20px;
+    line-height: 25px;
     text-align: right;
     color: #6C87AE;
     
@@ -166,7 +166,12 @@ color: var(--black);
       color: var(--white);
   }
   .services .flip-card-back.services-card p {
-    color: var(--white);
+    color: #e3e3e3;
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 30px;
+    text-align: right;
+
 }
 
 /* end services */
