--- a/css/sup-pages-style.css
+++ b/css/sup-pages-style.css
@@ -49,3 +49,46 @@ color: var(--prgcolor);
 
 
 /* terms end */
+
+
+/* QA start */
+
+
+.QA {
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+}
+  
+  .QA .accordion-item {
+    border: none !important;
+  }
+  .QA .accordion-button {
+    font-weight: 700 !important;
+    font-size: 18px;
+    line-height: 30px;
+    text-align: right;
+    letter-spacing: -0.015em;
+    color: var(--mainColor2);
+  }
+  .QA .accordion-button:not(.collapsed) {
+    background-color: white;
+    color: var(--mainColor2) !important;
+  }
+  
+  .QA .accordion-body {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 33px;
+    text-align: right;
+    letter-spacing: -0.015em;
+    color: #9497a1;
+  }
+
+  .accordion-button:not(.collapsed)::after {
+    background-image: url(
+        "data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23B8860B'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e"
+    );
+  }
+
+
+  /* end QA */
